Fixing swiping on mobile

--- a/src/Components/assets/css/App.css
+++ b/src/Components/assets/css/App.css
@@ -1,9 +1,11 @@
 
 html, body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 body {
+    position: relative;
     display: flex;
     justify-content: center;
 }
