--- a/src/Components/assets/css/Content.css
+++ b/src/Components/assets/css/Content.css
@@ -1,7 +1,7 @@
 
 .container {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
